kubernetes/infrastructure/observability/beszel/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: beszel
  namespace: observability
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`beszel.home.mcnees.me`)
      kind: Rule
      services:
        - name: beszel
          port: 8090
  tls:
    secretName: beszel-tls
